change jquery to head, delete code linenumber,change soft img

--- a/software/index.html
+++ b/software/index.html
@@ -30,10 +30,10 @@ comments: false
                 </ol>
                 <div class="carousel-inner" style="max-height:300px" role="listbox">
                     <div class="carousel-item active">
-                        <img class="w-100" src="http://hustlei.qiniudn.com/soft/soft1.jpg">
+                        <img class="w-100" src="{{ site.img }}/soft/soft1.jpg">
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100" src="http://hustlei.qiniudn.com/soft/soft2.jpg">
+                        <img class="w-100" src="{{ site.img }}/soft/soft2.jpg">
                     </div>
                 </div>
                 <a class="left carousel-control" href="#carousel-soft" role="button" data-slide="prev">
@@ -51,7 +51,7 @@ comments: false
         <div class="row">
             <article class="col-sm-6 col-md-4 p-1">
                 <div class="card">
-                    <div class="text-xs-center"><img class="card-img-top mx-auto" src="http://hustlei.qiniudn.com/soft/epub.ico" alt="EpubViewer"></div>
+                    <div class="text-xs-center"><img class="card-img-top mx-auto" src="{{ site.img }}/soft/epub.ico" alt="EpubViewer"></div>
                     <div class="card-block">
                         <h4 class="card-title">EpubViewer</h4>
                         <p class="card-text">EpubViewer是一个比较清新的Epub阅读器，包含了许多我自己想要的而功能。</p>
