--- a/pages/coding.html
+++ b/pages/coding.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: IT
+title: Coding
 header: Posts By Category
 comments: false
-id: it
+id: coding
 ---
 
 {% include JB/setup %}
