--- a/pages/about.html
+++ b/pages/about.html
@@ -20,8 +20,7 @@ comments: false
 
 <h2>个人资料</h2>
 <ol>
-<li>My新浪微博：<a target="__blank" href="http://weibo.com/hustlei">http://weibo.com/hustlei</a> </li>
-<li>My优酷：<a target="__blank" href="http://i.youku.com/hustlei">http://i.youku.com/hustlei</a></li>
+<li>My github：<a target="__blank" href="https://github.com/hustlei">https://github.com/hustlei</a> </li>
 <li>My邮箱：<a href="mailto:hustlei@sina.cn">发邮件给我</a></li>
 
 </ol>
